Commit in ssr_imRPZ #2.2 (подправил токен и swagger)
